# Voxeterra

./: .gitignore  CMakeLists.txt
shaders/: chunk.frag  chunk.vert
src/: Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Player.cpp  Player.h  TerrainGenerator.h  ThreadPool.h  World.cpp  World.h  main.cpp
